# Atlas

./: .gitignore  .gitmodules  CMake.Atlas.Codegen.cmake  CMake.Atlas.cmake  CMake.AtlasStripped.cmake  CMake.Targets.cmake  CMakeLists.txt  CMakePresets.json  vcpkg.json
CMake/: AtlasConfig.cmake.in  Precompile.cmake  Resource.cmake  Scaffold.cmake  Sources.cmake  Utility.cmake  Version.cmake  version.rc.in
CMake/Platform/: MSVC.cmake  MinGW.cmake
CMake/Toolchains/: Clang.cmake  MSVC.cmake  Vcpkg.cmake
Resources/AtlasCodegen/Database/Meta/: Meta.STU.csv
Resources/AtlasCodegen/Templates/: STU.inja
Resources/AtlasCodegen/Templates/Definition/: Function.inja  Struct.inja
Resources/AtlasCodegen/Templates/File/: Module.inja  Preamble.inja
Resources/AtlasCodegen/Templates/Member/: Field.inja
Resources/AtlasCodegen/Templates/Root/: Preamble.inja
Src/Binding/Serialization/: Serialization.Game.ixx  Serialization.Hex.ixx  Serialization.Root.ixx  Serialization.STU.cpp  Serialization.STU.ixx  Serialization.ixx
Src/Codegen/: Codegen.Instance.ixx  Codegen.cpp  Codegen.ixx  Main.cpp
Src/Codegen/Commands/: Command.Base.ixx  Command.Help.ixx  Command.ixx
Src/Codegen/Commands/MetaGen/: Command.STUMeta.ixx
Src/Codegen/Commands/ProbeGen/: Command.ProbeGen.ixx  ProbeGen.STU.ixx
Src/Codegen/Generators/: Generator.STU.ixx  Generator.ixx
Src/Codegen/Generators/Definition/: Definition.Members.ixx  Definition.Type.ixx  Definition.ixx
Src/Codegen/Generators/File/: File.Base.ixx  File.Module.ixx  File.ixx
Src/Codegen/Processes/: Process.Base.ixx  Process.Help.ixx  Process.ProbeGen.ixx  Process.STUMeta.ixx  Process.ixx
Src/Codegen/Processes/Probe/: ProbeGen.STU.ixx  ProbeGen.ixx  Process.Probe.ixx
Src/Codegen/Processes/ProbeGen/: ProbeGen.Base.ixx
Src/Codegen/STU/: STU.ixx
Src/Common/: Common.Inline.ixx  Common.Platform.Windows.ixx  Common.Type.ixx  Common.Utility.ixx  Common.ixx
Src/Common/Platform/: Platform.Windows.ixx
Src/Common/Private/: Common.Macros.h
Src/Core/: Atlas.cpp  Atlas.ixx
Src/Core/Context/: Context.Instance.ixx  Context.Platform.ixx  Context.Versioning.ixx  Context.ixx
Src/Core/Database/: Database.Instance.ixx  Database.Lookup.ixx  Database.Reference.ixx  Database.Type.ixx  Database.ixx
Src/Core/Database/Hash/: Hash.Data.ixx  Hash.Database.ixx  Hash.Digest.ixx  Hash.ixx
Src/Core/Database/Meta/: Meta.STU.Gen.ixx
Src/Core/Database/Probe/: Probe.Hex.ixx  Probe.Root.ixx  Probe.STU.cpp  Probe.STU.ixx  Probe.Struct.ixx  Probe.ixx
Src/Core/Database/Serialisation/: Serialisation.Hex.ixx  Serialisation.ixx
Src/Core/Log/: Log.Instance.cpp  Log.Instance.ixx  Log.Patterner.ixx  Log.ixx
Src/Core/Log/Formatting/: Formatting.Address.ixx  Formatting.ixx
Src/Core/Lookup/: Lookup.Hash.ixx  Lookup.ixx
Src/Core/Platform/: Platform.Windows.Extension.ixx  Platform.Windows.Types.ixx  Platform.Windows.cpp  Platform.Windows.ixx
Src/Core/Platform/Private/: Platform.Windows.h
Src/Core/Platform/Windows/: Platform.Windows.Types.ixx  Platform.Windows.cpp
Src/Core/Process/: Modules.ixx  Process.Module.cpp  Process.Module.ixx  Process.cpp  Process.ixx
Src/Core/Resources/: Resources.cpp  Resources.h  Resources.ixx
Src/Core/Runtime/: Module.ixx
Src/Game/Database/: Database.Lookup.ixx  Database.ixx
Src/Game/Database/Probe/: Probe.Hex.ixx  Probe.Root.ixx  Probe.STU.cpp  Probe.STU.ixx  Probe.ixx
Src/Game/STU/RTTI/: RTTI.STUArgumentInfo.ixx  RTTI.STUConstraint.cpp  RTTI.STUConstraint.ixx  RTTI.STUInfo.cpp  RTTI.STUInfo.ixx  RTTI.STURegistry.cpp  RTTI.STURegistry.ixx  RTTI.ixx
Src/Game/STU/RTTI/.Impl/: RTTI.STUArgumentInfoView.cpp  RTTI.STUArgumentInfoView.ixx  RTTI.STUInfoView.cpp  RTTI.STUInfoView.ixx  RTTI.STURegistryView.cpp  RTTI.STURegistryView.ixx
Src/Precompiled/: Definitions.h  Logs.h  Macros.h
Src/Types/: IdaDriver.cpp  Types.Something.ixx  Types.ixx
